test/sema/increment-through-pointer-error.delta.output
increment-through-pointer-error.delta:6:6: error: cannot increment 'bool'
    p++;
     ^
increment-through-pointer-error.delta:3:6: warning: unused declaration 'f'
void f(bool* a) {
     ^
