test/sema/increment-through-pointer-error.delta
// RUN: %check_errors %not %delta -typecheck %s

void f(bool* a) {
    var p = a;
    // CHECK: [[@LINE+1]]:6: error: cannot increment 'bool'
    p++;
}
